kubernetes/ayo-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: ayo-api
  name: ayo-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ayo-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose-windows-amd64.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/gateway: "true"
        io.kompose.service: ayo-api
    spec:
      containers:
        - image: ayo-api:001
          name: ayo-api
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
