kubernetes/ayo-database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: ayo-database
  name: ayo-database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ayo-database
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose-windows-amd64.exe convert
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/gateway: "true"
        io.kompose.service: ayo-database
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              value: root
          image: postgres:13-alpine
          name: ayo-database
          ports:
            - containerPort: 5432
          resources: {}
      restartPolicy: Always
status: {}
