kubernetes/gateway-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: gateway
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/gateway: "true"
  podSelector:
    matchLabels:
      io.kompose.network/gateway: "true"
